--- a/index.html
+++ b/index.html
@@ -785,7 +785,7 @@
     });
     
     document.querySelector('.md\\:hidden').addEventListener('click', () => {
-      alert('Menu mobile seria implementado aqui!');
+      alert('em desenvolvimento. - ass: slayer');
     });
     
     window.addEventListener('load', createParticles);
