--- a/index.html
+++ b/index.html
@@ -725,14 +725,8 @@
         <div>
           <h4 class="text-lg font-semibold text-white mb-4">Siga-nos</h4>
           <div class="flex space-x-4">
-            <a href="#" class="social-icon">
+            <a href="https://www.instagram.com/fazmeutrampo" class="social-icon">
               <i class="fab fa-instagram"></i>
-            </a>
-            <a href="#" class="social-icon">
-              <i class="fab fa-tiktok"></i>
-            </a>
-            <a href="#" class="social-icon">
-              <i class="fab fa-twitter"></i>
             </a>
           </div>
         </div>
